# fancy-crates

./: .gitignore  .vscodeignore  API.md  CHANGELOG.md  CHANGES.md  CODE_STYLE.md  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/: batch-analysis.ts  custom-registry.ts  security-audit.ts  single-crate.ts
src/api/: index.ts
src/cli/: index.ts
src/core/: advisory.ts  cargo.ts  config.ts  fetch.ts  format.ts  index.ts  lockfile.ts  parse.ts  source.test.ts  source.ts  types.ts  validate.test.ts  validate.ts
src/extension/: config.ts  decorate.ts  index.ts  log.ts  updateDependency.ts
test-workspace/: Cargo.toml  alternate-registry.sh  dependency-analysis.json  test-alternate-registry.sh  up-alternate-registry.sh
test-workspace/crates/example/: Cargo.toml
test-workspace/crates/example/.cargo/: config.toml
test-workspace/crates/external2/: Cargo.toml
test-workspace/crates/external3/: Cargo.toml
test-workspace/crates/git-test/: Cargo.toml
test-workspace/crates/lib/: Cargo.toml
test-workspace/crates/zero2prod/: Cargo.toml
